--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </div>
         <div class="nav">
             <a href="page.html"><button class="b wn">HOME</button></a>
-        <a href="video.html"><button class="b wn">VIDEO</button></a>
-        <button class="b wn">TUTORS</button>
+        <a href="ss.html"><button class="b wn">VIDEO</button></a>
+            <a href="tut.html"><button class="b wn">TUTORS</button></a>
         <button class="b wn">TEST YOURSELF</button>
         <a href="contact.html"><button class="b wn">CONTACT US</button></a>
         </div>
