--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         </div>
         <div class="nav">
             <a href="page.html"><button class="b wn">HOME</button></a>
-        <a href="ss.html"><button class="b wn">VIDEO</button></a>
+        <a href="vid.html"><button class="b wn">VIDEO</button></a>
             <a href="tut.html"><button class="b wn">TUTORS</button></a>
         <button class="b wn">TEST YOURSELF</button>
-        <a href="contact.html"><button class="b wn">CONTACT US</button></a>
+        <a href="ss.html"><button class="b wn">CONTACT US</button></a>
         </div>
         <div class="side">
             <header ><h2>SUBJECT</h2></header>
