--- a/ss.html
+++ b/ss.html
@@ -76,7 +76,7 @@ input[type=submit]:hover {
   </div>
   <div class="row">
     <div class="column">
-      <img src="/w3images/map.jpg" style="width:100%">
+      <img src="https://www.google.com/search?q=contact+us+pic&rlz=1C1GCEA_enIN938IN939&sxsrf=ALeKk03Br7wAM4V6-gb6lRP3Iy85MobPNA:1619518612938&tbm=isch&source=iu&ictx=1&fir=bRDE5QTfadHF-M%252CtlYvAxoK8U5zEM%252C_&vet=1&usg=AI4_-kSwVwgi6x8S4eHzwcJbnlCvb8QGOQ&sa=X&ved=2ahUKEwjT7oX9mJ7wAhUSgOYKHXCFDNsQ9QF6BAgHEAE#imgrc=bRDE5QTfadHF-M" style="width:100%">
     </div>
     <div class="column">
       <form action="/action_page.php">
